# Assinador

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  main.js  make.ps1  package-lock.json  package.json  preload.js  pyproject.toml  requirements.txt  types.ts  utils.js  whatsapp.js
TelegramManager/: __init__.py  main.py
TelegramManager/assets/: README.md
TelegramManager/assets/icons/: README.md
TelegramManager/core/: __init__.py  addition_manager.py  authentication.py  automation.py  container.py  database.py  extraction.py  reports.py  session_manager.py  telegram_client.py
TelegramManager/notifications/: __init__.py  dispatcher.py
TelegramManager/storage/: __init__.py  models.py
TelegramManager/ui/: __init__.py  main_window.py
TelegramManager/updater/: __init__.py  auto_updater.py
TelegramManager/utils/: __init__.py  async_worker.py  config.py  helpers.py  qr.py
app/: config.py  main.py
app/core/: config.py  container.py  db.py  init_db.py  models.py  session_manager.py  theming.py
app/flows/: first_contact.py  send_form.py  validate_and_notify.py
app/gui/: main_window.py
app/notifications/: dispatcher.py
app/server/: __init__.py  callbacks_govbr.py  callbacks_icpbr.py  http.py  webhooks_wa.py
app/services/: govbr.py  icpbr.py  telegram_client.py  tunnel.py  validator.py  whatsapp.py
app/storage/: database.py  models.py
app/ui/: accounts_dashboard.py  card.py  config.py  dashboard.py  tray.py  window.py
app/updater/: auto_updater.py
assets/logos/: README.md
assets/themes/: dark.json  direcional.json  mrv.json
docs/: arquitetura.md  blueprint-inicial.md  blueprint.md  passo-3-mail-adapters.md  passo-4-template-email.md  passo-5-envio.md  temas.md
docs/releases/: versao-1.5.md
renderer/: index.html  renderer.js  style.css
sessions/session-wa-1755308963052/: DevToolsActivePort
sessions/session-wa-1755317031406/: DevToolsActivePort
sessions/session-wa-1755317858923/: DevToolsActivePort
sessions/session-wa-1755382974128/: DevToolsActivePort
sessions/session-wa-1757042555046/: DevToolsActivePort
sessions/session-wa-1757042687953/: DevToolsActivePort
src/: CMakeLists.txt  main.cpp
src/data/: cadastro_repository.cpp  cadastro_repository.h  database_manager.cpp  database_manager.h
src/integration/: outlook_automation.cpp  outlook_automation.h
src/ui/: cadastro_form.cpp  cadastro_form.h  consulta_widget.cpp  consulta_widget.h  main_window.cpp  main_window.h
test/: utils.test.js
tests/: CMakeLists.txt  test_database_manager.cpp  test_models.py  test_placeholder.py  test_webhooks_wa.py
universal-mailer/: UniversalMailer.sln
universal-mailer/config/: agencies.csv  appsettings.json  keywords.yaml  mail.providers.json  whitelist_domains.txt
universal-mailer/docs/: changelog.md
(+978 files in other folders)
