[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assinador-desktop"
version = "0.1.0"
description = "Cliente desktop para gerenciamento de contas Telegram"
readme = "README.md"
authors = [{name = "Time Assinador"}]
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "telethon>=1.34",
    "SQLAlchemy>=2.0",
    "pydantic>=2.5",
    "plyer>=2.1",
    "requests>=2.31",
    "qrcode[pil]>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["TelegramManager*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["."]
